<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BestNotes</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_search">search</string>
    <string name="menu_share">share</string>
    <string name="menu_more">more</string>
    <string name="menu_add_note">add a note</string>
    <string name="menu_save">save</string>
    <string name="menu_delete">delete</string>
    <string name="menu_location">location</string>
    <string name="menu_done">done</string>
    <string name="menu_about">About</string>
    <string name="menu_check_update">Check Update</string>
    <string name="menu_other">Other</string>
    <string name="save_success">save success</string>
    <string name="save_faild">save faild</string>
    <string name="please_input_title">please input title</string>
    
    <string name="title">title</string>
    <string name="content">content</string>
    <string name="delete_success">delete success</string>
    <string name="selected_num">%1$s selected</string>
    <string name="untitled_notes">Untitled notes</string>
    <string name="content_is_empty">Content is empty</string>
    
    <string name="getting_location">Getting location</string>
    
    <string name="set_position">Set Position</string>
<!--     BestNotesAddLocationActivity页面提示文字 -->
    <string name="add_position_point">Click on the map to add a pin</string>
    
    <string name="check_update">Checking for updates</string>
    
    <string name="please_wait">Please wait</string>
    
    <string name="update_info_title">Detected a new version</string>
    
    <string name="update">Update</string>
    
    <string name="cancel">Cancel</string>
    
    <string name="no_new_version">You are using the latest version</string>
    <string name="contact_me">Contact us:</string>
    <string name="thanks">Thanks:</string>
    <string name="thank_for_donate">Thank you for your donations！</string>
    <string name="faild_to_donate">Failed to donors, but still thank you！</string>
    <string name="feed_me">feed me</string>
    <string name="menu_edit">Edit</string>
	<string name="confirm_delete">Confirm delete?</string>
	<string name="version">version:%1$s</string>
	<string name="donate">donate</string>
	<string name="no_data">No Data</string>
	<string name="unknown">Unknown</string>
	<string name="meters">Meters</string>
</resources>