<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_new"
        android:icon="@drawable/ic_menu_new"
        android:orderInCategory="1"
        android:showAsAction="always"
        android:title="@string/menu_add_note">
    </item>
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_menu_search"
        android:orderInCategory="2"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:showAsAction="always"
        android:orderInCategory="3"
        android:icon="@drawable/ic_menu_moreoverflow_normal"
        android:title="@string/menu_other">
        <menu>
            <item
                android:id="@+id/menu_about"
                android:showAsAction="withText"
                android:title="@string/menu_about"/>
            <item
                android:id="@+id/menu_check_update"
                android:showAsAction="withText"
                android:title="@string/menu_check_update"/>
        </menu>
    </item>

</menu>