<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    >
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:src="@drawable/ic_launcher"
        android:layout_marginTop="40dp"
        />
    <TextView 
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:layout_marginTop="10dp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="by Froid"
        android:layout_marginTop="5dp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/thanks"
        android:layout_marginTop="30dp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="Lesly"
        android:layout_marginTop="5dp"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/contact_me"
        android:layout_marginTop="30dp"
        />
	<TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="froidapp@gmail.com"
        android:layout_marginTop="5dp"
        android:autoLink="email"
        />
	<Button 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:text="@string/feed_me"
        android:textSize="12sp"
        android:onClick="feedMe"
        android:layout_marginTop="25dp"
        />
</LinearLayout>